[package]
name = "memds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.17.0", features = [ "full" ] }
anyhow = "1.0"
bytes = "1.1.0"
serde = "1.0"
deseresp = "0.1.1"
command-args = { path = "../command-args" }
command-args-derive = { path = "../command-args-derive" }
