[package]
name = "memds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
command-args = { path = "../command-args" }
command-args-derive = { path = "../command-args-derive" }
deseresp = "0.1.5"
serde = "1.0"
tokio = { version = "1.18.2", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
vtable = "0.1.6"
bincode = "1.3"
futures = "0.3"

[dev-dependencies]
assert_matches = "1.5"
